Keep tray dialogs mutually exclusive